--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Dat Boi
-description: Midnight is a theme for GitHub Pages.
+title: James Matyka
+description: My Projects
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-midnight
